Replace spirit path by github repo in README

--- a/spirit-cluster/wrf-met/arctic_2012_test_100km/README
+++ b/spirit-cluster/wrf-met/arctic_2012_test_100km/README
@@ -21,7 +21,7 @@
 # below.
 # 
 # Before running this test, the WRF model and WPS need to be compiled (see
-# instructions in ../../compilation/), or a compiled version of the model needs
+# instructions in WRF-compile-scripts), or a compiled version of the model needs
 # to be copied to your own space.
 # I also recommend going through the WRF online tutorial before running this
 # test, to better understand how the model works
